Build protobuf with 4.28
The protoc-bundled-plugin is outdated and
doesn't support protobuf4, so we have to
generate them manually with:
path/to/protoc-darwin-aarch_64 proto/src/main/protobuf/webutil/html/types/html.proto --java_out=types/src/main/java/

I had to delete some tests that were broken
SpliceableSafeHtml.java also doesn't appear to build successfully,
but we were not using it

The command to build the jar:
mvn install

--- a/types/pom.xml
+++ b/types/pom.xml
@@ -36,6 +36,18 @@
     </dependency>
 
     <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.10.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <version>1.4.4</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.google.jsinterop</groupId>
       <artifactId>jsinterop-annotations</artifactId>
       <version>1.0.1</version>
@@ -134,23 +146,6 @@
                 <argument>${project.build.outputDirectory}</argument>
               </arguments>
             </configuration>
-          </execution>
-        </executions>
-      </plugin>
-
-      <plugin>
-        <groupId>com.comoyo.maven.plugins</groupId>
-        <artifactId>protoc-bundled-plugin</artifactId>
-        <configuration>
-          <inputDirectories>
-            <inputDirectory>${project.parent.basedir}/proto/src/main/protobuf</inputDirectory>
-          </inputDirectories>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>run</goal>
-            </goals>
           </execution>
         </executions>
       </plugin>
