--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     <java.version>1.7</java.version>
     <guava.version>19.0</guava.version>
-    <protobuf.version>3.3.0</protobuf.version>
+    <protobuf.version>4.28.2</protobuf.version>
     <autovalue.version>1.5.2</autovalue.version>
   </properties>
 
@@ -169,11 +169,6 @@
           <version>2.8.2</version>
         </plugin>
         <plugin>
-          <groupId>com.comoyo.maven.plugins</groupId>
-          <artifactId>protoc-bundled-plugin</artifactId>
-          <version>1.4.61</version>
-        </plugin>
-        <plugin>
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
           <version>3.0.0</version>
@@ -203,6 +198,11 @@
         <groupId>com.google.security</groupId>
         <artifactId>fences-maven-enforcer-rule</artifactId>
         <version>1.5-beta</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.code.gson</groupId>
+        <artifactId>gson</artifactId>
+        <version>2.10.1</version>
       </dependency>
       <dependency>
         <groupId>com.google.protobuf</groupId>
